--- a/trunk/src/kernel/interrupt/Makefile
+++ b/trunk/src/kernel/interrupt/Makefile
@@ -1,6 +1,6 @@
 all: interrupt_hw.o interrupt.o
 
-interrupt.o: interrupt.c interrupt.h
+interrupt.o: interrupt.c interrupt.h ../kernel.h
 	gcc -ffreestanding -fno-builtin -nostdlib -o interrupt.o -c interrupt.c
 
 interrupt_hw.o: interrupt_hw.asm
